--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,466 @@ img {
   height: auto;
 }
 
+.hero-slider {
+  padding: 0 16px 56px;
+}
+
+.itc-slider__img-container {
+  width: 328px;
+  height: 200px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+
+.itc-slider__img {
+  width: 328px;
+  height: 200px;
+  border-radius: 19px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.itc-slider__deskr {
+  display: flex;
+  flex-direction: column;
+}
+
+.itc-slider__deskr_text {
+  font-weight: 400;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.container_slideshow {
+  max-width: 328px;
+  margin: 0 auto;
+}
+
+.itc-slider__wrapper {
+  overflow: hidden;
+}
+
+.itc-slider__item {
+  flex: 0 0 50%;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.itc-slider {
+  position: relative;
+}
+
+.itc-slider__wrapper {
+  overflow: hidden;
+}
+
+.itc-slider__items {
+  display: flex;
+  transition: transform 0.5s ease;
+  will-change: transform;
+  gap: 8px;
+}
+
+.itc-slider-transition-none {
+  transition: none;
+}
+
+.itc-slider__item {
+  flex: 0 0 100%;
+  max-width: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  will-change: transform;
+}
+
+/* кнопки влево и вправо */
+.itc-slider__btn {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 50px;
+  color: #fff;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.2);
+  border: none;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.itc-slider__btn-hide {
+  display: none;
+}
+
+.itc-slider__btn_prev {
+  left: 0;
+}
+
+.itc-slider__btn_next {
+  right: 0;
+}
+
+.itc-slider__btn:hover,
+.itc-slider__btn:focus {
+  color: #fff;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.3);
+  outline: 0;
+}
+
+.itc-slider__btn::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: transparent no-repeat center center;
+  background-size: 100% 100%;
+}
+
+.itc-slider__btn-prev::before {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.itc-slider__btn-next::before {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+/* индикаторы */
+.itc-slider__indicators {
+  position: absolute;
+  right: 0;
+  bottom: 100px;
+  left: 0;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  margin: 0 15%;
+  padding-left: 0;
+  list-style: none;
+}
+
+.itc-slider__indicator {
+  flex: 0 1 auto;
+  box-sizing: content-box;
+  width: 24px;
+  height: 8px;
+  margin-right: 3px;
+  margin-left: 3px;
+  text-indent: -999px;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-clip: padding-box;
+  cursor: pointer;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+}
+
+.itc-slider__indicators .itc-slider__indicator-active {
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 24px;
+  border-radius: 8px;
+}
+
+.btn-transparent {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 120%;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  padding: 8px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+  background-color: #14063D;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 48px;
+  position: relative;
+  width: 160px;
+  height: 32px;
+}
+.btn-transparent_select {
+  width: 170px;
+}
+.btn-transparent_payment {
+  width: 314px;
+}
+.btn-transparent_opportunities {
+  width: 241px;
+}
+.btn-transparent:hover, .btn-transparent:focus {
+  border: 1px solid transparent;
+}
+
+.btn-grad {
+  transition: all 0.1s;
+}
+.btn-grad:hover {
+  display: inline-block;
+  border-radius: 48px;
+  width: 160px;
+  height: 32px;
+  background: linear-gradient(to right, #800bf5 70%, #25c6f9);
+  padding: 1px;
+}
+.btn-grad_select:hover {
+  width: 170px;
+}
+.btn-grad_payment:hover {
+  width: 314px;
+}
+.btn-grad_opportunities:hover {
+  width: 241px;
+}
+
+.btn-gradient {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  background: linear-gradient(90deg, #800bf5 26.67%, #25c6f9 97.33%);
+  border-radius: 56px;
+  gap: 8px;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+.btn-gradient_small {
+  width: 177px;
+  margin-bottom: 35px;
+}
+
+.itc-slider__wrapper_width {
+  width: 328px;
+  height: 328px;
+  margin: 0 auto;
+}
+
+.itc-slider__indicators_position {
+  bottom: -48px;
+}
+
+.elips {
+  border-radius: 50%;
+  background: linear-gradient(136deg, rgb(20, 6, 61) 44%, rgba(128, 11, 245, 0.6) 114%);
+  width: 328px;
+  height: 328px;
+}
+.elips_4 {
+  background: linear-gradient(90deg, #800bf5 26.67%, #25c6f9 97.33%);
+  z-index: -10;
+}
+
+.count {
+  font-family: "Russo One", sans-serif;
+  font-size: 80px;
+  line-height: 100%;
+  color: #14063D;
+  position: absolute;
+  left: 120px;
+  bottom: -19px;
+}
+
+.play-together__text_center {
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  color: #ffffff;
+  transition: all 0.5s;
+}
+.play-together__text_center:hover, .play-together__text_center:focus {
+  transform: translate(-50%, -50%) scale(1.3);
+}
+
+.slider-container {
+  position: relative;
+  overflow-x: hidden;
+  height: 140px;
+}
+@media screen and (min-width: 768px) {
+  .slider-container {
+    height: 216px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .slider-container {
+    height: 200px;
+  }
+}
+
+.slider-width {
+  position: absolute;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  left: 0;
+  top: 0;
+  transition: 0.4s ease-in-out;
+  gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .slider-width {
+    gap: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .slider-width {
+    gap: 24px;
+  }
+}
+
+.slider-img {
+  height: 140px;
+  width: 244px;
+}
+@media screen and (min-width: 768px) {
+  .slider-img {
+    height: 216px;
+    width: 336px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .slider-img {
+    height: 200px;
+    width: 312px;
+  }
+}
+
+.item {
+  height: 140px;
+  width: 244px;
+}
+@media screen and (min-width: 768px) {
+  .item {
+    height: 216px;
+    width: 336px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .item {
+    height: 200px;
+    width: 312px;
+  }
+}
+
+.btn-slider {
+  cursor: pointer;
+  background: #49CBF4;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50px;
+  height: 48px;
+  width: 48px;
+}
+.btn-slider_left {
+  left: 0;
+}
+.btn-slider_left img {
+  transform: rotate(180deg);
+}
+.btn-slider_right {
+  right: 0;
+}
+@media screen and (min-width: 768px) {
+  .btn-slider {
+    height: 80px;
+    width: 80px;
+  }
+}
+
+.slider-container {
+  position: relative;
+  overflow-x: hidden;
+  height: 140px;
+}
+@media screen and (min-width: 768px) {
+  .slider-container {
+    height: 216px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .slider-container {
+    height: 200px;
+  }
+}
+
+.sliders {
+  display: flex;
+  width: 100%;
+  gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .sliders {
+    gap: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .sliders {
+    gap: 24px;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1750px);
+  }
+}
+.slider_3 {
+  background: white;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  height: 100px;
+  margin: 6зч;
+  overflow: hidden;
+  position: relative;
+  width: 960px;
+}
+.slider_3::before, .slider_3::after {
+  background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+  content: "";
+  height: 100px;
+  position: absolute;
+  width: 200px;
+  z-index: 2;
+}
+.slider_3::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+.slider_3::before {
+  left: 0;
+  top: 0;
+}
+.slider_3 .slide-track {
+  animation: scroll 40s linear infinite;
+  display: flex;
+  width: 3500px;
+}
+.slider_3 .slide {
+  height: 100px;
+  width: 250px;
+}
+
 .header {
   height: 80px;
 }
@@ -399,6 +859,15 @@ img {
   margin-bottom: 24px;
 }
 
+.catalog__slider-box {
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.catalog__slider-box:last-child {
+  margin-bottom: 0px;
+}
+
 .payment {
   padding-bottom: 61px;
 }
@@ -453,288 +922,4 @@ img {
   opacity: 0.4;
   line-height: 24px;
   margin-bottom: 40px;
-}
-
-.hero-slider {
-  padding: 0 16px 56px;
-}
-
-.itc-slider__img-container {
-  width: 328px;
-  height: 200px;
-  border-radius: 16px;
-  overflow: hidden;
-  margin-bottom: 24px;
-}
-
-.itc-slider__img {
-  width: 328px;
-  height: 200px;
-  border-radius: 19px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.itc-slider__deskr {
-  display: flex;
-  flex-direction: column;
-}
-
-.itc-slider__deskr_text {
-  font-weight: 400;
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.4);
-}
-
-.container_slideshow {
-  max-width: 328px;
-  margin: 0 auto;
-}
-
-.itc-slider__wrapper {
-  overflow: hidden;
-}
-
-.itc-slider__item {
-  flex: 0 0 50%;
-  max-width: 50%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.itc-slider {
-  position: relative;
-}
-
-.itc-slider__wrapper {
-  overflow: hidden;
-}
-
-.itc-slider__items {
-  display: flex;
-  transition: transform 0.5s ease;
-  will-change: transform;
-  gap: 8px;
-}
-
-.itc-slider-transition-none {
-  transition: none;
-}
-
-.itc-slider__item {
-  flex: 0 0 100%;
-  max-width: 100%;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-  will-change: transform;
-}
-
-/* кнопки влево и вправо */
-.itc-slider__btn {
-  position: absolute;
-  top: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 50px;
-  color: #fff;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.2);
-  border: none;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-
-.itc-slider__btn-hide {
-  display: none;
-}
-
-.itc-slider__btn_prev {
-  left: 0;
-}
-
-.itc-slider__btn_next {
-  right: 0;
-}
-
-.itc-slider__btn:hover,
-.itc-slider__btn:focus {
-  color: #fff;
-  text-decoration: none;
-  background: rgba(0, 0, 0, 0.3);
-  outline: 0;
-}
-
-.itc-slider__btn::before {
-  content: "";
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.itc-slider__btn-prev::before {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-}
-
-.itc-slider__btn-next::before {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
-
-/* индикаторы */
-.itc-slider__indicators {
-  position: absolute;
-  right: 0;
-  bottom: 100px;
-  left: 0;
-  z-index: 15;
-  display: flex;
-  justify-content: center;
-  margin: 0 15%;
-  padding-left: 0;
-  list-style: none;
-}
-
-.itc-slider__indicator {
-  flex: 0 1 auto;
-  box-sizing: content-box;
-  width: 24px;
-  height: 8px;
-  margin-right: 3px;
-  margin-left: 3px;
-  text-indent: -999px;
-  background-color: rgba(255, 255, 255, 0.5);
-  background-clip: padding-box;
-  cursor: pointer;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-}
-
-.itc-slider__indicators .itc-slider__indicator-active {
-  background-color: rgba(255, 255, 255, 0.9);
-  width: 24px;
-  border-radius: 8px;
-}
-
-.btn-transparent {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 120%;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  padding: 8px 16px;
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
-  background-color: #14063D;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 48px;
-  position: relative;
-  width: 160px;
-  height: 32px;
-}
-.btn-transparent_select {
-  width: 170px;
-}
-.btn-transparent_payment {
-  width: 314px;
-}
-.btn-transparent_opportunities {
-  width: 241px;
-}
-.btn-transparent:hover, .btn-transparent:focus {
-  border: 1px solid transparent;
-}
-
-.btn-grad {
-  transition: all 0.1s;
-}
-.btn-grad:hover {
-  display: inline-block;
-  border-radius: 48px;
-  width: 160px;
-  height: 32px;
-  background: linear-gradient(to right, #800bf5 70%, #25c6f9);
-  padding: 1px;
-}
-.btn-grad_select:hover {
-  width: 170px;
-}
-.btn-grad_payment:hover {
-  width: 314px;
-}
-.btn-grad_opportunities:hover {
-  width: 241px;
-}
-
-.btn-gradient {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 12px;
-  border: none;
-  background: linear-gradient(90deg, #800bf5 26.67%, #25c6f9 97.33%);
-  border-radius: 56px;
-  gap: 8px;
-  color: #ffffff;
-  font-size: 16px;
-  font-family: "PT Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%;
-}
-.btn-gradient_small {
-  width: 177px;
-  margin-bottom: 35px;
-}
-
-.itc-slider__wrapper_width {
-  width: 328px;
-  height: 328px;
-  margin: 0 auto;
-}
-
-.itc-slider__indicators_position {
-  bottom: -48px;
-}
-
-.elips {
-  border-radius: 50%;
-  background: linear-gradient(136deg, rgb(20, 6, 61) 44%, rgba(128, 11, 245, 0.6) 114%);
-  width: 328px;
-  height: 328px;
-}
-.elips_4 {
-  background: linear-gradient(90deg, #800bf5 26.67%, #25c6f9 97.33%);
-  z-index: -10;
-}
-
-.count {
-  font-family: "Russo One", sans-serif;
-  font-size: 80px;
-  line-height: 100%;
-  color: #14063D;
-  position: absolute;
-  left: 120px;
-  bottom: -19px;
-}
-
-.play-together__text_center {
-  z-index: 10;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-  color: #ffffff;
-  transition: all 0.5s;
-}
-.play-together__text_center:hover, .play-together__text_center:focus {
-  transform: translate(-50%, -50%) scale(1.3);
 }/*# sourceMappingURL=index.css.map */
