--- a/sass/components/_catalog.scss
+++ b/sass/components/_catalog.scss
@@ -9,3 +9,11 @@ padding-bottom: 80px;
     margin-top: 0;
     margin-bottom: 24px;
 }
+
+.catalog__slider-box{
+    margin-bottom: 16px;
+    position: relative;
+}
+.catalog__slider-box:last-child{
+    margin-bottom: 0px;
+}
